--- a/JattanaNursury/Views/Products/Index.cshtml
+++ b/JattanaNursury/Views/Products/Index.cshtml
@@ -4,7 +4,53 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-12"></div>
+    <div class="col-12"></div>
+    <div class="col-12">
+        <div id="home-cards" class="row">
+            @foreach (var item in Model)
+            {
+                <div class="home col-sm-12 col-md-3">
+                    <div class="div-img">
+                        <img src="~/@Html.DisplayFor(modelItem => item.ImageUrl)" alt="Product Image">
+                    </div>
+                    <div class="home-content">
+                        <p class="home-title">@Html.DisplayFor(modelItem => item.Name)</p>
+                        <ul class="home-list">
+                            <li class="home-attri">
+                                <i class="fa fa-comment"></i>
+                                <span>@Html.DisplayFor(modelItem => item.Description)</span>
+                            </li>
+                            <li class="home-attri">
+                                <i class="fa fa-bars" ></i>
+                                <span><strong>@Html.DisplayFor(modelItem => item.Category.Name)</strong></span>
+                            </li>
+                            <li class="home-attri">
+                                <i class="fa fa-warehouse"></i>
+                                <span>@Html.DisplayFor(modelItem => item.Quantity)</span>
+                            </li>
+                            <li class="home-attri">
+                                <i class="fa fa-money-bill"></i>
+                                <span>Price: @Html.DisplayFor(modelItem => item.UnitPrice)/ Unit</span>
+                            </li>
+                            <li class="home-attri">
+                                <i class="fa fa-user"></i>
+                                <span>Selling Price: @Html.DisplayFor(modelItem => item.SellingPrice)</span>
+                            </li>
+                        </ul>
+                        <div class="row justify-content-evenly">
+                            
+                                <a class="col-3 link-card btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                <a class="col-3 link-card btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+@* <h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -33,39 +79,46 @@
             <th>
                 @Html.DisplayNameFor(model => model.Category)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ImageUrl)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SellingPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SKU)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UnitPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SellingPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SKU)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                   <img src="~/@Html.DisplayFor(modelItem=>item.ImageUrl)" alt="Product Image">
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ImageUrl)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
-</table>
+</table> *@
