--- a/JattanaNursury/wwwroot/css/order.css
+++ b/JattanaNursury/wwwroot/css/order.css
@@ -1,4 +1,73 @@
-﻿.select2-selection, .select2-selection__rendered {
+﻿
+/*#Start*/
+/*Card styling*/
+.home-title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.home-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding-left: 20px;
+    margin-bottom: 8px;
+}
+#home-cards {
+    gap: 20px;
+}
+.home-attri {
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+.home-icon {
+    height: 24px;
+    width: 24px;
+    color: green;
+    margin-right: 10px;
+}
+
+.col {
+    padding: 0 !important;
+}
+.home img {
+    width: 100%;
+    height: 100%;
+}
+#home-cards {
+    gap: 20px;
+}
+
+.home {
+    box-shadow: 0 24px 48px rgba(0, 0, 0, 7.75%);
+    border-radius: 12px;
+    overflow: hidden;
+    transition: all 0.4s;
+    padding: 0;
+}
+.div-img {
+    height: 212px;
+}
+.home-content {
+    padding: 20px 14px;
+    background-color: white;
+    color: #3f576b;
+}
+
+
+.home:hover {
+    box-shadow: 0 32px 64px rgba(0, 0, 0, 10.75%);
+    transform: translate(0, -10px);
+}
+/*#End*/
+
+/*#Start*/
+/*select2 custom styling*/
+.select2-selection, .select2-selection__rendered {
     height:100% !important; 
 }
 
@@ -12,6 +81,7 @@
 .select2-container--classic .select2-results__option--highlighted.select2-results__option--selectable {
     background-color: #79bf9f !important;
 }
+/*#End*/
 
 .c-pointer {
     cursor:pointer;
