added button to create product, fixed unitprice to selling price, backend ready for discount

--- a/JattanaNursury/Views/Orders/Create.cshtml
+++ b/JattanaNursury/Views/Orders/Create.cshtml
@@ -115,7 +115,7 @@
                             results: data.map((item) => ({
                                 id: item.id,
                                 text: item.name,
-                                price: item.unitPrice,
+                                price: item.sellingPrice,
                                 quantity: item.quantity,
                                 totalPrice: item.totalPrice
                             }))
