--- a/JattanaNursury/Views/Orders/Create.cshtml
+++ b/JattanaNursury/Views/Orders/Create.cshtml
@@ -82,9 +82,30 @@
                             <span class="input-group-text" id="inputGroup-sizing-default">₹ Bill</span>
                             <input disabled id="billPrice" class="form-control" value="0.00" type="number" />
                         </div>
-                        <button type="submit" id="saleBtn" class="btn btn-danger">Sale</button>
+                        <button type="button" data-toggle="modal" data-target="payment-modal" id="saleBtn" class="btn btn-danger">Sale</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@* sale btn Modal *@
+<div class="modal" tabindex="-1" role="dialog" id="payment-modal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Payment!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Did you recieved payment?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="payment-done">Yes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="no-payment">No</button>
             </div>
         </div>
     </div>
@@ -257,15 +278,31 @@
             $('#billPrice').val(billPrice);
         }
 
-        $('#saleBtn').on('click', function () {
+        $('#payment-done').on('click', function () {
+            const orderModel = PrepareOrderModelToSubmit(true);
+            PostOrder(orderModel);
+        });
+
+        $('#no-payment').on('click', function () {
+            const orderModel = PrepareOrderModelToSubmit(false);
+            PostOrder(orderModel);
+        });
+
+        function PrepareOrderModelToSubmit(isPaid) 
+        {
             let products = [];
 
             productsInList.forEach((item) => {
                 products.push({ productId: item.id, quantity: item.quantity });
             });
 
-            const orderModel = { customerName: $("#nameInput").val(), phoneNumber: $("#phoneInput").val(), fullAddress: $("#addInput").val(), emailAddress: $("#emailInput").val(), discount: parseFloat($("#discountInput").val()), employee: $("#empInput").val(), products: products }
+            let orderModel = { customerName: $("#nameInput").val(), phoneNumber: $("#phoneInput").val(), fullAddress: $("#addInput").val(), emailAddress: $("#emailInput").val(), discount: parseFloat($("#discountInput").val()), employee: $("#empInput").val(), products: products, isPaid: isPaid };
 
+            return orderModel;
+        }
+
+        function PostOrder(orderModel) 
+        {
             $.ajax({
                 url: '/Orders/SaveSaleOrder',
                 type: 'post',
@@ -275,10 +312,8 @@
                 success: function (message) {
                     console.log(message);
                 }
-
             });
-
-        });
+        }
 
     </script>
     }
