fixed add product button

--- a/JattanaNursury/Views/Products/Index.cshtml
+++ b/JattanaNursury/Views/Products/Index.cshtml
@@ -10,7 +10,7 @@
         </h2>
     </div>
     <div class="col-12 d-flex justify-content-end">
-        <button class="btn btn-success">Add New</button>
+        <a class="btn btn-success" asp-action="Create" asp-controller="Products" >Add New</a>
     </div>
     <div class="col-12 mt-4">
         <div id="home-cards" class="row">
