--- a/JattanaNursury/Views/Orders/Create.cshtml
+++ b/JattanaNursury/Views/Orders/Create.cshtml
@@ -52,16 +52,16 @@
                     <h3 class="text-center mb-3"> Customer Information</h3>
                     <div class="d-flex flex-column" style="gap:15px;">
                         <div class="input-group">
-                            <input placeholder="Name" value="Khush" required class="form-control" id="nameInput" />
+                            <input placeholder="Name"  required class="form-control" id="nameInput" />
                         </div>
                         <div class="input-group">
-                            <input placeholder="Phone Number" value="9876543210" class="form-control" id="phoneInput" required />
+                            <input placeholder="Phone Number"  class="form-control" id="phoneInput" required />
                         </div>
                         <div class="input-group">
                             <input placeholder="Email" class="form-control" id="emailInput" required />
                         </div>
                         <div class="input-group">
-                            <input placeholder="Address" value="Chuhrian" class="form-control" required id="addInput" />
+                            <input placeholder="Address" class="form-control" required id="addInput" />
                         </div>
                     </div>
                 </div>
@@ -69,23 +69,23 @@
                     <h3 class="text-center mb-3">Billing</h3>
                     <div class="d-flex flex-column" style="gap:15px;">
                         <div class="input-group">
-                            <input placeholder="Employee" value="Demo" class="form-control" id="empInput" />
+                            <input placeholder="Employee"  class="form-control" id="empInput" />
                         </div>
                         <div class="input-group">
                             <span class="input-group-text" id="inputGroup-sizing-default">₹ Price</span>
-                            <input disabled type="number" class="form-control" value="0.00" id="totalPrice" />
+                            <input disabled type="number" class="form-control" value="0" id="totalPrice" />
                         </div>
                         <div class="input-group">
                             <span class="input-group-text" id="inputGroup-sizing-default">₹ Discount</span>
-                            <input placeholder="Discount" min="0" type="number" value="20" class="form-control" id="discountInput" />
+                            <input placeholder="Discount" min="0" type="number" value="0" class="form-control" id="discountInput" />
                         </div>
                         <div class="input-group">
                             <span class="input-group-text" id="inputGroup-sizing-default">₹ Bill</span>
-                            <input disabled id="billPrice" class="form-control" value="0.00" type="number" />
+                            <input disabled id="billPrice" class="form-control" value="0" type="number" />
                         </div>    
                         <div class="input-group">
                             <span class="input-group-text" id="inputGroup-sizing-default">₹ Customer Paid</span>
-                            <input id="customerPrice" class="form-control" value="100" type="number" />
+                            <input id="customerPrice" class="form-control" value="0" type="number" />
                         </div>
                         <button type="button" data-toggle="modal" data-target="payment-modal" id="saleBtn" class="btn btn-danger">Sale</button>
                     </div>
